new client changes updated

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
           </button>
           <ul class="custom-navbar" id="menuToggle">
             <li class="active"><a href="/">Home</a></li>
+            <li><a href="/health-benefits.html">Health Benefits</a></li>
             <li><a href="/products.html">Products</a></li>
             <li><a href="/videos.html">Videos</a></li>
             <li><a href="/testimonials.html">Testimonials</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
+            <li><a href="/news.html">News</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
         </div>
@@ -233,7 +235,7 @@
     </div>
   </div>
 
-  <div class="testimonial-section">
+  <div class="testimonial-section d-none">
     <div class="container">
       <h1 class="section-heading"><i class="bi bi-quote"></i>Testimonials</h1>
       <p class="section-para">Explore the clients experience.</p>
