--- a/products.html
+++ b/products.html
@@ -42,12 +42,14 @@
           </button>
           <ul class="custom-navbar" id="menuToggle">
             <li><a href="/">Home</a></li>
+            <li><a href="/health-benefits.html">Health Benefits</a></li>
             <li class="active"><a href="/products.html">Products</a></li>
             <li><a href="/videos.html">Videos</a></li>
             <li><a href="/testimonials.html">Testimonials</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
+            <li><a href="/news.html">News</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
         </div>
