vidoes and testimonila content added

--- a/healthy-water.html
+++ b/healthy-water.html
@@ -43,10 +43,10 @@
           <ul class="custom-navbar" id="menuToggle">
             <li><a href="/">Home</a></li>
             <li><a href="/health-benefits.html">Health Benefits</a></li>
-            <li><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
-            <li><a href="/contact.html">Contact</a></li>
             <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/testimonials.html">Testimonials</a></li>
+            <li><a href="/about.html">About</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
             <li><a href="/news.html">News</a></li>
           </ul>
@@ -103,34 +103,26 @@
           </div>
         </div>
         <div class="col">
-          <h3>Hydrogen Rich </h3>
+          <h3>Antioxidant (Hydrogen Rich) </h3>
           <p>Water that is Hydrogen rich has a high concentration of Molecular Hydrogen (H2). Molecular Hydrogen acts as
             an efficient antioxidant that diffuses rapidly across cell membranes and can reduce free radicals,
             suppressing oxidative stress.</p>
           <p>Through the process of electrolysis, your tap water becomes Hydrogen rich Kangen Water®. </p>
-        </div>
-      </div>
-      <div class="row align-items-center py-5">
-        <div class="col">
-          <h3>Antioxidant </h3>
           <p>Oxidation reactions in the body can produce free radicals, while antioxidants terminate these reactions.
             Elevated rates of oxidants and insufficient antioxidants in the body cause oxidative stress. A constant
             supply of external sources of antioxidants should be part of one's daily diet, to reduce oxidative stress
             and related damage. This is why everyone should not only care about the quantity of the water we drink, but
             also about the quality. Both are essential for our wellbeing. </p>
-        </div>
-        <div class="col justify-content-center d-flex align-items-center">
-          <div class="inner-about-img">
-            <img src="img/hw/antioxidant.jpg" alt="">
-          </div>
+          <p>Hydrogen rich water is characterised by exhibiting a negative ORP. A high ORP value (in positive numbers),
+            indicates that a substance has a higher oxidizing potential. In generalised terms, for humans a positive or
+            high ORP is better for the outside of the body (cleaning and sanitizing). A low ORP value (in negative
+            numbers) indicates that a substance has a higher antioxidizing potential, and is preferred for oral
+            consumption. Just like pH, ORP values are an important measurement for determining the quality of water.
+          </p>
         </div>
       </div>
+
       <div class="row align-items-center py-5">
-        <div class="col justify-content-center d-flex align-items-center">
-          <div class="inner-about-img">
-            <img src="img/hw/rgb.jpg" alt="">
-          </div>
-        </div>
         <div class="col">
           <h3>Alkaline </h3>
           <p>As with most things in life, optimal health begins with balance. Our bodies must maintain a pH balance of
@@ -138,23 +130,16 @@
             alkaline. On this scale 7.0 is neutral. Anything above 7 is considered alkaline and anything below 7 is
             considered acidic. </p>
         </div>
+        <div class="col justify-content-center d-flex align-items-center">
+          <div class="inner-about-img">
+            <img src="img/hw/rgb.jpg" alt="">
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
 
-
-  <div class="inner-body">
-    <div class="container">
-      <h1>Negative ORP</h1><br>
-      <div class="col">
-        <p>Hydrogen rich water is characterised by exhibiting a negative ORP. A high ORP value (in positive numbers),
-          indicates that a substance has a higher oxidizing potential. In generalised terms, for humans a positive or
-          high ORP is better for the outside of the body (cleaning and sanitizing). A low ORP value (in negative
-          numbers) indicates that a substance has a higher antioxidizing potential, and is preferred for oral
-          consumption. Just like pH, ORP values are an important measurement for determining the quality of water. </p>
-      </div>
-    </div>
-  </div>
 
   <div class="d-none">
     <div class="inner-body">
