--- a/videos.html
+++ b/videos.html
@@ -63,28 +63,148 @@
 
   <div class="inner-body">
     <div class="container">
-
       <h1>Videos</h1>
       <div id="video-player">
         <div class="container">
           <div class="row ofoh-videoplayer">
+
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+            <div class="col-sm-3"><video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto"
+                controls></video></div>
+
+
             <div class="col-sm-3">
               <ul id="playlist">
-                <li movieurl="img/videos/1.mp4" id="myvideo">
+                <li movieurl="img/videos/2.mp4" id="myvideo1">
                   <button class="video-button left-menu active" id="video-btn-1" time="0">Video 1</button>
                 </li>
 
-                <li movieurl="img/videos/2.mp4" id="myvideo2">
+                <li movieurl="img/videos/3.mp4" id="myvideo2">
                   <button class="video-button left-menu" id="relationship-jump" time="0">Video 2</button>
                 </li>
-
+                <li movieurl="img/videos/4.mp4" id="myvideo3">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 3</button>
+                </li>
+                <li movieurl="img/videos/5.mp4" id="myvideo4">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 4</button>
+                </li>
+                <li movieurl="img/videos/6.mp4" id="myvideo5">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 5</button>
+                </li>
+                <li movieurl="img/videos/7.mp4" id="myvideo6">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 6</button>
+                </li>
+                <li movieurl="img/videos/8.mp4" id="myvideo7">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 7</button>
+                </li>
+                <li movieurl="img/videos/9.mp4" id="myvideo8">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 8</button>
+                </li>
+                <li movieurl="img/videos/10.mp4" id="myvideo9">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 9</button>
+                </li>
+                <li movieurl="img/videos/11.mp4" id="myvideo10">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 10</button>
+                </li>
+                <li movieurl="img/videos/12.mp4" id="myvideo11">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 11</button>
+                </li>
+                <li movieurl="img/videos/13.mp4" id="myvideo12">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 12</button>
+                </li>
+                <li movieurl="img/videos/14.mp4" id="myvideo13">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 13</button>
+                </li>
+                <li movieurl="img/videos/15.mp4" id="myvideo14">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 14</button>
+                </li>
+                <li movieurl="img/videos/16.mp4" id="myvideo15">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 15</button>
+                </li>
+                <li movieurl="img/videos/17.mp4" id="myvideo16">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 16</button>
+                </li>
+                <li movieurl="img/videos/18.mp4" id="myvideo17">
+                  <button class="video-button left-menu" id="relationship-jump" time="0">Video 17</button>
+                </li>
               </ul>
             </div>
             <div class="col-sm-9">
-              <video id="videoarea" poster="" src="" proload="auto" controls></video>
+              <video id="videoarea" poster="" src="img/videos/2.mp4" proload="auto" controls></video>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="inner-body pt-0">
+    <div class="container">
+      <h1>Youtube Videos</h1>
+      <div class="youtube-links">
+        <ul class="youtube-list">
+          <li><i class="bi bi-youtube"></i> <a href="https://youtube.com/watch?v=o99mCdPTli8&feature=shared"
+              target="_blank">https://youtube.com/watch?v=o99mCdPTli8&feature=shared </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/gHDKhXYw7Qg?si=u7RC1830DKI3cn0r"
+              target="_blank">https://youtu.be/gHDKhXYw7Qg?si=u7RC1830DKI3cn0r </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/lxhEr_7RTxo?si=3TfZ3HRypdDAqPhf"
+              target="_blank">https://youtu.be/lxhEr_7RTxo?si=3TfZ3HRypdDAqPhf </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/y6bo7EDm5_I?si=A11qmOMS6r6V6zoW"
+              target="_blank">https://youtu.be/y6bo7EDm5_I?si=A11qmOMS6r6V6zoW </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtube.com/shorts/jmuucgIak1o?si=QQhNhDT1aWLeU5_O"
+              target="_blank">https://youtube.com/shorts/jmuucgIak1o?si=QQhNhDT1aWLeU5_O </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/XUUi7vl8wQk?si=HYeW7pBA4jiIsCnW"
+              target="_blank">https://youtu.be/XUUi7vl8wQk?si=HYeW7pBA4jiIsCnW </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/uA6yzj9oQkc?si=No85Fely06zDnVat"
+              target="_blank">https://youtu.be/uA6yzj9oQkc?si=No85Fely06zDnVat </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/SHkZiHdLNW0?si=qkVwAmLDVqEtDH-6"
+              target="_blank">https://youtu.be/SHkZiHdLNW0?si=qkVwAmLDVqEtDH-6 </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtube.com/watch?v=EcS5HpnFZ5A&feature=shared"
+              target="_blank">https://youtube.com/watch?v=EcS5HpnFZ5A&feature=shared </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/FuNWfD9sDrs"
+              target="_blank">https://youtu.be/FuNWfD9sDrs </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/ijSG5bVtXUU?si=yDRKjUmvfMYu0l3M"
+              target="_blank">https://youtu.be/ijSG5bVtXUU?si=yDRKjUmvfMYu0l3M </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/DjUpWTFsv04"
+              target="_blank">https://youtu.be/DjUpWTFsv04 </a></li>
+
+        </ul>
       </div>
     </div>
   </div>
@@ -155,7 +275,6 @@
         myvideo.currentTime = $(this).attr("time")
       }
     });
-    $("#video-btn-1").click();
 
   </script>
 </body>
