--- a/testimonials.html
+++ b/testimonials.html
@@ -61,156 +61,69 @@
     <div class="banner-text"> Testimonials </div>
   </div>
 
+
   <div class="inner-body">
     <div class="container">
-      <div class="row">
-        <h1>Testimonials</h1>
+      <h1>Videos</h1>
+      <div id="video-player">
+        <div class="container">
+          <div class="row ofoh-videoplayer">
+            <div class="col-sm-3">
+              <ul id="playlist">
+                <li movieurl="img/testi/1.mp4" id="myvideo1">
+                  <button class="video-button left-menu active" id="video-btn-1" time="0">Video 1</button>
+                </li>
+                <li movieurl="img/testi/2.mp4" id="myvideo2">
+                  <button class="video-button left-menu active" id="video-btn-2" time="0">Video 2</button>
+                </li>
+                <li movieurl="img/testi/3.mp4" id="myvideo3">
+                  <button class="video-button left-menu active" id="video-btn-3" time="0">Video 3</button>
+                </li>
+                <li movieurl="img/testi/4.mp4" id="myvideo4">
+                  <button class="video-button left-menu active" id="video-btn-4" time="0">Video 4</button>
+                </li>
+                <li movieurl="img/testi/5.mp4" id="myvideo5">
+                  <button class="video-button left-menu active" id="video-btn-5" time="0">Video 5</button>
+                </li>
+                <li movieurl="img/testi/6.mp4" id="myvideo6">
+                  <button class="video-button left-menu active" id="video-btn-6" time="0">Video 6</button>
+                </li>
+                <li movieurl="img/testi/7.mp4" id="myvideo7">
+                  <button class="video-button left-menu active" id="video-btn-7" time="0">Video 7</button>
+                </li>
+                <li movieurl="img/testi/8.mp4" id="myvideo8">
+                  <button class="video-button left-menu active" id="video-btn-8" time="0">Video 8</button>
+                </li>
+                <li movieurl="img/testi/9.mp4" id="myvideo9">
+                  <button class="video-button left-menu active" id="video-btn-9" time="0">Video 9</button>
+                </li>
+                <li movieurl="img/testi/10.mp4" id="myvideo10">
+                  <button class="video-button left-menu active" id="video-btn-10" time="0">Video 10</button>
+                </li>
+                <li movieurl="img/testi/11.mp4" id="myvideo11">
+                  <button class="video-button left-menu active" id="video-btn-11" time="0">Video 11</button>
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-9">
+              <video id="videoarea" poster="" src="img/testi/1.mp4" proload="auto" controls></video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="inner-body pt-0">
+    <div class="container">
+      <h1>Youtube Videos</h1>
+      <div class="youtube-links">
+        <ul class="youtube-list">
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/p2UnotRaqC0?si=oKmb5EBwR4-9MdMm "
+              target="_blank">https://youtu.be/p2UnotRaqC0?si=oKmb5EBwR4-9MdMm </a></li>
+          <li><i class="bi bi-youtube"></i> <a href="https://youtu.be/gGtzu_-ryzY?si=slzOw53S3mrwZoVC"
+              target="_blank">https://youtu.be/gGtzu_-ryzY?si=slzOw53S3mrwZoVC </a></li>
 
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img class="tm-people-inner" src="img/t1.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <div class="starts">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star"></i>
-                </div>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img class="tm-people-inner" src="img/t1.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <div class="starts">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star"></i>
-                </div>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img class="tm-people-inner" src="img/t1.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <div class="starts">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star"></i>
-                </div>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img class="tm-people-inner" src="img/t1.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <div class="starts">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star"></i>
-                </div>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img class="tm-people-inner" src="img/t1.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <div class="starts">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star"></i>
-                </div>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-2">
-              <img class="tm-people-inner" src="img/t1.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-10">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <div class="starts">
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star"></i>
-                </div>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        </ul>
       </div>
     </div>
   </div>
@@ -255,6 +168,35 @@
   <script src="js/slick.min.js"></script>
   <script src="js/t-js_t.min.js"></script>
   <script src="js/custom.js"></script>
+
+  <script>
+    var myvideo = document.getElementById("videoarea")
+    $(".video-button").on("click", function () {
+      $(".video-button").removeClass("active");
+      $(this).addClass("active");
+      // if we need to load a new video do so
+      if ($("#videoarea").attr("src") != $(this).parent().attr("movieurl")) {
+        $("#videoarea").attr({
+          "src": $(this).parent().attr("movieurl"),
+          "poster": "",
+          // load a fake attribute with the desired start time
+          "starttime": $(this).attr("time")
+        })
+        $("#videoarea").on("canplay", function () {
+          // set the current time to the fake attribute
+          myvideo.currentTime = $(this).attr("starttime")
+          myvideo.play();
+          // remove the event to stop it triggering multiple times
+          $("#videoarea").off("canplay")
+        })
+      } else {
+        // if the video URL didn't change, just adjust the time
+        myvideo.currentTime = $(this).attr("time")
+      }
+    });
+    $("#video-btn-1").click();
+
+  </script>
 </body>
 
 </html>
